...
/* Class = "UIButton"; normalTitle = "Continue"; ObjectID = "QVX-vI-Tzn"; */
"QVX-vI-Tzn.normalTitle" = "Continue";

/* Class = "UILabel"; text = "Holidays"; ObjectID = "TDf-63-7ce"; */
"TDf-63-7ce.text" = "Holidays";

/* Class = "UILabel"; text = "Currency Converter"; ObjectID = "TX8-le-6Df"; */
"TX8-le-6Df.text" = "Currency Converter";

/* Class = "UILabel"; text = "Mirror"; ObjectID = "VV8-za-92e"; */
"VV8-za-92e.text" = "Mirror";

/* Class = "UILabel"; text = "Improvements and Optimizations"; ObjectID = "X9q-e5-Qlr"; */
...
/* Class = "UILabel"; text = "Wallet"; ObjectID = "bKr-UI-1QI"; */
"bKr-UI-1QI.text" = "Wallet";

/* Class = "UIButton"; normalTitle = "Use AppBox Pro"; ObjectID = "bqT-N1-DoK"; */
"bqT-N1-DoK.normalTitle" = "Use AppBox Pro";

/* Class = "UILabel"; text = "Calculator"; ObjectID = "bwe-yZ-jRu"; */
"bwe-yZ-jRu.text" = "Calculator";

/* Class = "UILabel"; text = "Random"; ObjectID = "cFb-hc-ow3"; */
"cFb-hc-ow3.text" = "Random";

/* Class = "UILabel"; text = "Translator"; ObjectID = "e4s-HD-NMM"; */
...
