...

	[targetController setToolbarHidden:YES];
	[targetController setNavigationBarHidden:NO animated:NO];
}

- (void)leftBarButtonAppsButton {
	self.navigationItem.leftBarButtonItem = [[UIBarButtonItem alloc] initWithTitle:NSLocalizedString(@"Apps", @"Apps") style:UIBarButtonItemStylePlain target:self action:@selector(appsButtonAction:)];
}

- (void)appsButtonAction:(UIBarButtonItem *)barButtonItem {
	[self.editingObject resignFirstResponder];
	if (IS_IPHONE) {
		if ([[A3AppDelegate instance] isMainMenuStyleList]) {
...
 */
- (NSString *)shareMessageFormat {
	return [NSString stringWithFormat:@"<br/>%%@<br/>%@", [self commonShareFooter]];
}

- (NSString *)commonShareFooter {
	return [NSString stringWithFormat:@"<img style='border:0;' src='http://apns.allaboutapps.net/allaboutapps/appboxIcon60.png' alt='AppBox Pro'><br/><a href='https://itunes.apple.com/app/id318404385'>%@</a></body></html>",
									  NSLocalizedString(@"Download from AppStore", nil)];
}

- (NSString *)appITunesURL {
	return @"https://itunes.apple.com/app/id318404385";
}
...
