...
}

- (void)viewDidLoad {
    [super viewDidLoad];

	self.searchController.searchBar.placeholder = NSLocalizedString(@"Search", @"Search");
	self.title = NSLocalizedString(@"Select Currency", @"Select Currency");

	[self registerContentSizeCategoryDidChangeNotification];
    self.searchController.dimsBackgroundDuringPresentation = NO;
    self.definesPresentationContext = YES;
}

...
